--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-streamlit==1.31.0
-pandas==2.2.0
+numpy==1.23.5
+opencv-python==4.8.0.74
+ultralytics
+cvzone
+mysql-connector-python
+paddleocr>=2.0.0
+paddlepaddle
+albumentations
+streamlit
